--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="./images/our_work_1.jpg"
+              src="./images/studio/our_work_1.jpg"
               alt="Development of desktop apps"
               width="360"
               height="300"
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./images/our_work_2.jpg"
+              src="./images/studio/our_work_2.jpg"
               alt="Development of mobile apps"
               width="360"
               height="300"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./images/our_work_3.jpg"
+              src="./images/studio/our_work_3.jpg"
               alt="Development of desktop and mobile apps"
               width="360"
               height="300"
@@ -99,7 +99,7 @@
         <ul>
           <li>
             <img
-              src="./images/team_img_4.jpg"
+              src="./images/studio/team_img_4.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -109,7 +109,7 @@
           </li>
           <li>
             <img
-              src="./images/team_img_3.jpg"
+              src="./images/studio/team_img_3.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -119,7 +119,7 @@
           </li>
           <li>
             <img
-              src="./images/team_img_2.jpg"
+              src="./images/studio/team_img_2.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -129,7 +129,7 @@
           </li>
           <li>
             <img
-              src="./images/team_img_1.jpg"
+              src="./images/studio/team_img_1.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
