--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
@@ -24,6 +24,7 @@
     </header>
     <main>
       <section>
+        <h1>Projects</h1>
         <ul>
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
@@ -33,56 +34,67 @@
         </ul>
         <ul>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="Banking App Interface"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-3.jpg" alt="Meditation App" />
+            <h3>Meditation App</h3>
+            <p>App</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-4.jpg" alt="Taxi Service" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-6.jpg" alt="Online Courses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-7.jpg" alt="Fresh Coffee" />
+            <h3>Fresh Coffee</h3>
+            <p>Design</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-8.jpg" alt="Fresh Coffee" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img src="./images/portfolio/img-9.jpg" alt="Fresh Coffee" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href=""></a>
-      <p></p>
+      <a href="./index.html">Web<span>Studio</span></a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
