--- a/portfolio.html
+++ b/portfolio.html
@@ -3,95 +3,162 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header-portfolio">
+      <nav class="hrader-portfolio-nav">
+        <a class="link nav-logo" href="./index.html">Web<span>Studio</span></a>
+        <ul class="list nav-list">
+          <li class="nav-list-item">
+            <a class="link nav-item-link" href="./index.html">Studio</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="link nav-item-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="link nav-item-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <addres>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <addres class="header-portfolio-address">
+        <ul class="list address-list">
+          <li class="address-list-item">
+            <a class="link address-item-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-list-item">
+            <a class="link address-item-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </addres>
     </header>
-    <main>
-      <section>
-        <h1>Projects</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+    <main class="main-portfolio">
+      <section class="main-projects">
+        <h1 class="projects-title">Projects</h1>
+
+        <ul class="list projects-filter-list">
+          <li class="filter-list-item">
+            <button class="btn filter-item-btn" type="button">All</button>
+          </li>
+          <li class="filter-list-item">
+            <button class="btn filter-item-btn" type="button">Web Site</button>
+          </li>
+          <li class="filter-list-item">
+            <button class="btn filter-item-btn" type="button">App</button>
+          </li>
+          <li class="filter-list-item">
+            <button class="btn filter-item-btn" type="button">Design</button>
+          </li>
+          <li class="filter-list-item">
+            <button class="btn filter-item-btn" type="button">Marketing</button>
+          </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="list projects-list">
+          <li class="projects-list-item">
             <img
+              class="projects-item-img"
               src="./images/portfolio/img-1.jpg"
               alt="Banking App Interface"
               width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h2 class="projects-item-title">Banking App Interface Concept</h2>
+            <p class="projects-item-text">App</p>
           </li>
-          <li>
-            <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/portfolio/img-3.jpg" alt="Meditation App" />
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img src="./images/portfolio/img-4.jpg" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+          <li class="projects-list-item">
             <img
+              class="projects-item-img"
+              src="./images/portfolio/img-2.jpg"
+              alt="Cashless Payment"
+            />
+            <h2 class="projects-item-title">Cashless Payment</h2>
+            <p class="projects-item-text">Marketing</p>
+          </li>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-3.jpg"
+              alt="Meditation App"
+            />
+            <h2 class="projects-item-title">Meditation App</h2>
+            <p class="projects-item-text">App</p>
+          </li>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-4.jpg"
+              alt="Taxi Service"
+            />
+            <h2 class="projects-item-title">Taxi Service</h2>
+            <p class="projects-item-text">Marketing</p>
+          </li>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
               src="./images/portfolio/img-5.jpg"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Marketing</p>
+            <h2 class="projects-item-title">Screen Illustrations</h2>
+            <p class="projects-item-text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/portfolio/img-6.jpg" alt="Online Courses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-6.jpg"
+              alt="Online Courses"
+            />
+            <h2 class="projects-item-title">Online Courses</h2>
+            <p class="projects-item-text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/portfolio/img-7.jpg" alt="Fresh Coffee" />
-            <h3>Fresh Coffee</h3>
-            <p>Design</p>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-7.jpg"
+              alt="Fresh Coffee"
+            />
+            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <p class="projects-item-text">Design</p>
           </li>
-          <li>
-            <img src="./images/portfolio/img-8.jpg" alt="Fresh Coffee" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-8.jpg"
+              alt="Fresh Coffee"
+            />
+            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <p class="projects-item-text">Web Site</p>
           </li>
-          <li>
-            <img src="./images/portfolio/img-9.jpg" alt="Fresh Coffee" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="projects-list-item">
+            <img
+              class="projects-item-img"
+              src="./images/portfolio/img-9.jpg"
+              alt="Fresh Coffee"
+            />
+            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <p class="projects-item-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">Web<span>Studio</span></a>
-      <p>
+    <footer class="footer-portfolio">
+      <a class="link footer-portfolio-logo" href="./index.html"
+        >Web<span>Studio</span></a
+      >
+      <p class="footer-portfolio-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
