--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
 
     <title>WebStudio</title>
@@ -19,7 +24,9 @@
   <body>
     <header class="header-studio">
       <nav class="header-studio-nav">
-        <a href="./index.html" class="link nav-logo">WebStudio</a>
+        <a href="./index.html" class="link nav-logo"
+          >Web<span class="nav-logo-header">Studio</span></a
+        >
         <ul class="list nav-list">
           <li class="nav-list-item">
             <a class="link nav-item-link" href="./index.html">Studio</a>
@@ -56,7 +63,7 @@
       </section>
       <!-- Section 2:  Features -->
       <section class="features">
-        <h2 class="features-title">Products</h2>
+        <h2 class="visually-hidden">Products</h2>
         <ul class="list fratures-list">
           <li class="features-list-item">
             <h3 class="features-item-title">Strategy</h3>
@@ -173,7 +180,9 @@
       </section>
     </main>
     <footer class="footer-studio">
-      <a class="link footer-studio-logo" href="./index.html">WebStudio</a>
+      <a class="link footer-studio-logo" href="./index.html"
+        >Web<span class="logo-footer">Studio</span></a
+      >
       <p class="footer-stidio-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
