add styles to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,21 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Portfolio</title>
   </head>
   <body>
     <header class="header-portfolio">
-      <nav class="hrader-portfolio-nav">
-        <a class="link nav-logo" href="./index.html">Web<span>Studio</span></a>
+      <nav class="header-portfolio-nav">
+        <a class="link nav-logo" href="./index.html"
+          >Web<span class="header-second-logo">Studio</span></a
+        >
         <ul class="list nav-list">
           <li class="nav-list-item">
             <a class="link nav-item-link" href="./index.html">Studio</a>
@@ -48,7 +55,7 @@
     </header>
     <main class="main-portfolio">
       <section class="main-projects">
-        <h1 class="projects-title">Projects</h1>
+        <h1 class="visually-hidden">Projects</h1>
 
         <ul class="list projects-filter-list">
           <li class="filter-list-item">
@@ -156,7 +163,7 @@
     </main>
     <footer class="footer-portfolio">
       <a class="link footer-portfolio-logo" href="./index.html"
-        >Web<span>Studio</span></a
+        >Web<span class="footer-second-logo">Studio</span></a
       >
       <p class="footer-portfolio-text">
         Increase the flow of customers and sales for your business with digital
