--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header-studio">
       <nav class="header-studio-nav">
         <a href="./index.html" class="link nav-logo"
-          >Web<span class="nav-logo-header">Studio</span></a
+          >Web<span class="header-second-logo">Studio</span></a
         >
         <ul class="list nav-list">
           <li class="nav-list-item">
