--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,9 @@
               width="360"
               height="300"
             />
-            <h2 class="projects-item-title">Banking App Interface Concept</h2>
+            <h2 class="subtitle projects-item-title">
+              Banking App Interface Concept
+            </h2>
             <p class="projects-item-text">App</p>
           </li>
           <li class="projects-list-item">
@@ -92,7 +94,7 @@
               src="./images/portfolio/img-2.jpg"
               alt="Cashless Payment"
             />
-            <h2 class="projects-item-title">Cashless Payment</h2>
+            <h2 class="subtitle projects-item-title">Cashless Payment</h2>
             <p class="projects-item-text">Marketing</p>
           </li>
           <li class="projects-list-item">
@@ -101,7 +103,7 @@
               src="./images/portfolio/img-3.jpg"
               alt="Meditation App"
             />
-            <h2 class="projects-item-title">Meditation App</h2>
+            <h2 class="subtitle projects-item-title">Meditation App</h2>
             <p class="projects-item-text">App</p>
           </li>
           <li class="projects-list-item">
@@ -110,7 +112,7 @@
               src="./images/portfolio/img-4.jpg"
               alt="Taxi Service"
             />
-            <h2 class="projects-item-title">Taxi Service</h2>
+            <h2 class="subtitle projects-item-title">Taxi Service</h2>
             <p class="projects-item-text">Marketing</p>
           </li>
           <li class="projects-list-item">
@@ -119,7 +121,7 @@
               src="./images/portfolio/img-5.jpg"
               alt="Screen Illustrations"
             />
-            <h2 class="projects-item-title">Screen Illustrations</h2>
+            <h2 class="subtitle projects-item-title">Screen Illustrations</h2>
             <p class="projects-item-text">Marketing</p>
           </li>
           <li class="projects-list-item">
@@ -128,7 +130,7 @@
               src="./images/portfolio/img-6.jpg"
               alt="Online Courses"
             />
-            <h2 class="projects-item-title">Online Courses</h2>
+            <h2 class="subtitle projects-item-title">Online Courses</h2>
             <p class="projects-item-text">Marketing</p>
           </li>
           <li class="projects-list-item">
@@ -137,7 +139,7 @@
               src="./images/portfolio/img-7.jpg"
               alt="Fresh Coffee"
             />
-            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <h2 class="subtitle projects-item-title">Fresh Coffee</h2>
             <p class="projects-item-text">Design</p>
           </li>
           <li class="projects-list-item">
@@ -146,7 +148,7 @@
               src="./images/portfolio/img-8.jpg"
               alt="Fresh Coffee"
             />
-            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <h2 class="subtitle projects-item-title">Fresh Coffee</h2>
             <p class="projects-item-text">Web Site</p>
           </li>
           <li class="projects-list-item">
@@ -155,7 +157,7 @@
               src="./images/portfolio/img-9.jpg"
               alt="Fresh Coffee"
             />
-            <h2 class="projects-item-title">Fresh Coffee</h2>
+            <h2 class="subtitle projects-item-title">Fresh Coffee</h2>
             <p class="projects-item-text">Web Site</p>
           </li>
         </ul>
