--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2 class="visually-hidden">Products</h2>
         <ul class="list fratures-list">
           <li class="features-list-item">
-            <h3 class="features-item-title">Strategy</h3>
+            <h3 class="subtitle features-item-title">Strategy</h3>
             <p class="features-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -97,7 +97,7 @@
       </section>
       <!-- Section 3: Products -->
       <section class="products">
-        <h2 class="products-title">What are we doing</h2>
+        <h2 class="title products-title">What are we doing</h2>
         <ul class="list products-list">
           <li class="products-list-item">
             <img
@@ -130,7 +130,7 @@
       </section>
       <!-- Section 4: Team -->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="title team-title">Our Team</h2>
         <ul class="list team-list">
           <li class="team-list-item">
             <img
@@ -140,7 +140,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-title">Mark Guerrero</h3>
+            <h3 class="subtitle team-item-title">Mark Guerrero</h3>
             <p class="team-item-text">Product Designer</p>
           </li>
           <li class="team-list-item">
@@ -151,7 +151,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-title">Tom Ford</h3>
+            <h3 class="subtitle team-item-title">Tom Ford</h3>
             <p class="team-item-text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
@@ -162,7 +162,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-title">Camila Garcia</h3>
+            <h3 class="subtitle team-item-title">Camila Garcia</h3>
             <p class="team-item-text">Marketing</p>
           </li>
           <li class="team-list-item">
@@ -173,7 +173,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-item-title">Daniel Wilson</h3>
+            <h3 class="subtitle team-item-title">Daniel Wilson</h3>
             <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
@@ -181,9 +181,9 @@
     </main>
     <footer class="footer-studio">
       <a class="link footer-studio-logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
+        >Web<span class="footer-second-logo">Studio</span></a
       >
-      <p class="footer-stidio-text">
+      <p class="footer-studio-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
